Fixed a bug which the user can continue drawing a shape after it was "closed"

--- a/canvasPaint/war/index.html
+++ b/canvasPaint/war/index.html
@@ -18,7 +18,7 @@
 </head>
 <body onload="initialize()">
 
-<p>Área de dibujo | <button onclick="closeShape()">Cerrar figura</button> | <button onclick="cleanShape()">Limpiar</button> <br>
+<p>Área de dibujo | <button onclick="closeShape()" id="idCloseShape">Cerrar figura</button> | <button onclick="cleanShape()">Limpiar</button> <br>
 <canvas id="areaDibujo" width="500" height="500" class="area" onclick="drawSharp(event)">Canvas not supported</canvas>
 
 </body>
