--- a/canvasPaint/war/index.html
+++ b/canvasPaint/war/index.html
@@ -11,18 +11,23 @@
 	border: 3px;
 	background-color: #E6E6FF;
 }
+
+.medidas{
+	background-color: gray;
+}
 </style>
 
 <script type="text/javascript" src="canvas.js"></script>
+<script type="text/javascript" src="control.js"></script>
 
 </head>
-<body onload="initialize()" onkeypress="toDrawRect(event)">
+<body onload="initialize()">
 
 <p>Área de dibujo | <button onclick="closeShape()" id="idCloseShape">Cerrar figura</button> | <button onclick="cleanShape()">Limpiar</button> <br>
 <p>Para hacer una línea recta horizontal, vertical o diagonal: mantenga pulsado la tecla Shift y haga clic en el sitio deseado para crear la línea<br>
 <canvas id="areaDibujo" width="500" height="500" class="area" onclick="drawSharp(event)">Canvas not supported</canvas><br>
 
-<div id="inputMedida" style="display: none;"><input type="number" maxlength="4" size="10"></div>
+<div id="inputMedida" style="display: none;" class="medidas">Medida: <input type="text" maxlength="6" size="10" id="inputM" onblur="getMeasure()" onkeypress="return isFloat(event)" onkeyup="getMeasureIntro(event)"></div>
 
 </body>
 </html>
