--- a/canvasPaint/war/index.html
+++ b/canvasPaint/war/index.html
@@ -23,11 +23,12 @@
 </head>
 <body onload="initialize()">
 
-<p>Área de dibujo | <button onclick="closeShape()" id="idCloseShape">Cerrar figura</button> | <button onclick="cleanShape()">Limpiar</button> <br>
+<p>Área de dibujo | <button onclick="closeShape()" id="idCloseShape">Cerrar figura</button> | <button onclick="cleanShape()">Limpiar</button> | <button id="btnSave" onclick="saveImage()">Guardar imagen</button> <br>
 <p>Para hacer una línea recta horizontal, vertical o diagonal: mantenga pulsado la tecla Shift y haga clic en el sitio deseado para crear la línea<br>
 <canvas id="areaDibujo" width="500" height="500" class="area" onclick="drawSharp(event)" onmousemove="drawGuideLine(event)">Canvas not supported</canvas><br>
 
 <div id="inputMedida" style="display: none;" class="medidas">Medida: <input type="text" maxlength="6" size="10" id="inputM" onblur="getMeasure()" onkeypress="return isFloat(event)" onkeyup="getMeasureIntro(event)"></div>
-
+<br>
+<img id="drawShowerPlate" width="500" height="500" style="display:none">
 </body>
 </html>
