After the shower tub is drawn, you can place a grid (a small circle)

--- a/canvasPaint/war/index.html
+++ b/canvasPaint/war/index.html
@@ -33,11 +33,11 @@
 	<table>
 		<tr>
 			<td>Posición desde lado izquierdo:</td>
-			<td id="posX"></td>
+			<td id="posX"><input type="text" size="10" maxlength="6" onkeypress="return isFloat(event)"></td>
 		</tr>
 		<tr>
 			<td>Posición desde arriba:</td>
-			<td id="posY"></td>
+			<td id="posY"><input type="text" size="10" maxlength="6" onkeypress="return isFloat(event)"></td>
 		</tr>
 	</table>
 </div>
